--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@ FINDPYTHON()
 SET(${PROJECT_NAME}_SOURCES
   __init__.py
   SurfacePlanner.py
+  SurfacePlannerURDF.py
+  FootStepPlanner.py
+  FootStepTrajectory.py
+  GaitManager.py
+  contact.py
   )
 
 SET(${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES
@@ -37,6 +42,7 @@ SET(${PROJECT_NAME}_TOOLS_SOURCES
   geometry_utils.py
   heightmap.py
   heightmap_generator.py
+  optimisation.py
   )
 
 FOREACH(src ${${PROJECT_NAME}_SOURCES})
