--- a/walkgen/config/parameters.yaml
+++ b/walkgen/config/parameters.yaml
@@ -10,7 +10,10 @@ params:
   method_id: 3 # Method to remove overlapping
   poly_size: 10 # Number of maximum point for convex decomposition.
   min_area: 0.03 # Minimum area to keep the surfaces
-  N_phase: 3 # Number of step to proceed (--> N_phase * n_gait step in SL1M)
+  N_phase: 2 # Number of step to proceed (--> N_phase * n_gait step in SL1M)
   N_phase_return: 2 # Number of step to return (N_phase_return surfaces for each foot)
-  com: True # Optimisation of the CoM
+  com: False # Optimisation of the CoM
   multiprocessing: False
+
+gait:
+  type: "Walk" # Only "Walk" or "Trot" working
