Add Wrapper for Footstep and Gait manager, clean code, add parameters in config file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(${PROJECT_NAME}_SOURCES
   FootStepTrajectory.py
   GaitManager.py
   contact.py
+  FootStepManager.py
   )
 
 SET(${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES
