--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,12 @@ SET(${PROJECT_NAME}_TOOLS_SOURCES
   optimisation.py
   )
 
+SET(${PROJECT_NAME}_TESTS_SOURCES
+  __init__.py
+  surface_planner.py
+  )
+
+
 FOREACH(src ${${PROJECT_NAME}_SOURCES})
   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME} ${src})
 ENDFOREACH(src ${PROJECT_NAME}_SOURCES)
@@ -149,6 +155,10 @@ ENDFOREACH(src ${PROJECT_NAME}_SOURCES)
 FOREACH(src ${${PROJECT_NAME}_STANDALONE_SURFACES_SOURCES})
   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/stand_alone_scenarios/surfaces ${src})
 ENDFOREACH(src ${PROJECT_NAME}_STANDALONE_SURFACES_SOURCES)
+
+FOREACH(src ${${PROJECT_NAME}_TESTS_SOURCES})
+  PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/tests ${src})
+ENDFOREACH(src ${PROJECT_NAME}_TESTS_SOURCES)
 
 FOREACH(src ${${PROJECT_NAME}_TOOLS_SOURCES})
   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/tools ${src})
