Install data folder into install folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,7 +147,6 @@ SET(${PROJECT_NAME}_TESTS_SOURCES
   surface_planner.py
   )
 
-
 FOREACH(src ${${PROJECT_NAME}_SOURCES})
   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME} ${src})
 ENDFOREACH(src ${PROJECT_NAME}_SOURCES)
@@ -166,3 +165,6 @@ ENDFOREACH(src ${PROJECT_NAME}_TOOLS_SOURCES)
 
 ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
 INSTALL(TARGETS ${PROJECT_NAME} EXPORT ${TARGETS_EXPORT_NAME} DESTINATION lib)
+
+INSTALL(DIRECTORY walkgen/data
+  DESTINATION ${PYTHON_SITELIB}/walkgen)
