Update stand alone scenarios for URDF and Planseg version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,8 @@ SET(${PROJECT_NAME}_SOURCES
 
 SET(${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES
   __init__.py
-  anymal_stairs.py
+  anymal_stairs_planeseg.py
+  anymal_stairs_urdf.py
   )
 
 SET(${PROJECT_NAME}_TOOLS_SOURCES
@@ -152,9 +153,9 @@ FOREACH(src ${${PROJECT_NAME}_SOURCES})
   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME} ${src})
 ENDFOREACH(src ${PROJECT_NAME}_SOURCES)
 
-FOREACH(src ${${PROJECT_NAME}_STANDALONE_SURFACES_SOURCES})
-  PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/stand_alone_scenarios/surfaces ${src})
-ENDFOREACH(src ${PROJECT_NAME}_STANDALONE_SURFACES_SOURCES)
+FOREACH(src ${${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES})
+  PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/stand_alone_scenarios ${src})
+ENDFOREACH(src ${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES)
 
 FOREACH(src ${${PROJECT_NAME}_TESTS_SOURCES})
   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/tests ${src})
