Quick fix, remove import of SurfacePlanner to avoid calling gurobi, while waiting for more permanent decoupling in the module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,7 @@ endif()
 
 SET(${PROJECT_NAME}_SOURCES
   __init__.py
-  SurfacePlanner.py
+  # SurfacePlanner.py
   FootStepPlanner.py
   FootStepTrajectory.py
   GaitManager.py
@@ -153,13 +153,13 @@ FOREACH(src ${${PROJECT_NAME}_SOURCES})
   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME} ${src})
 ENDFOREACH(src ${PROJECT_NAME}_SOURCES)
 
-FOREACH(src ${${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES})
-  PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/stand_alone_scenarios ${src})
-ENDFOREACH(src ${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES)
+# FOREACH(src ${${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES})
+#   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/stand_alone_scenarios ${src})
+# ENDFOREACH(src ${PROJECT_NAME}_STANDALONE_SCENARIOS_SOURCES)
 
-FOREACH(src ${${PROJECT_NAME}_TESTS_SOURCES})
-  PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/tests ${src})
-ENDFOREACH(src ${PROJECT_NAME}_TESTS_SOURCES)
+# FOREACH(src ${${PROJECT_NAME}_TESTS_SOURCES})
+#   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/tests ${src})
+# ENDFOREACH(src ${PROJECT_NAME}_TESTS_SOURCES)
 
 FOREACH(src ${${PROJECT_NAME}_TOOLS_SOURCES})
   PYTHON_INSTALL_ON_SITE(${PROJECT_NAME}/tools ${src})
