--- a/walkgen/config/params.yaml
+++ b/walkgen/config/params.yaml
@@ -17,10 +17,20 @@ walkgen_params:
     com: False # Optimisation of the CoM
 
   gait:
-    type: "Walk" # Only "Walk" or "Trot" working
+    type: "walk" # Only "walk" or "trot" working
     dt: 0.01
     N_ss: 20 # 30 for Trot
     N_ds: 5 # 0 for Trot
     horizon: 125 # Horizon length of the queue of contact.
     nsteps: 1 # Number of iteration.
     stepHeight: 0.15 # Step height [m]
+    trot:
+      N_ds: 0
+      N_ss: 60
+      N_uds: 0
+      N_uss: 0
+    walk:
+      N_ds: 90
+      N_ss: 70
+      N_uds: 0
+      N_uss: 0
