Adding bezier curve feature

--- a/walkgen_footstep_planner/CMakeLists.txt
+++ b/walkgen_footstep_planner/CMakeLists.txt
@@ -33,59 +33,62 @@ ADD_SUBDIRECTORY("python")
 # ---------cpp bindings----------
 # -------------------------------
 
-# FINDPYTHON()
-# SEARCH_FOR_BOOST_PYTHON()
-# ADD_PROJECT_DEPENDENCY(Eigen3 REQUIRED)
-# ADD_PROJECT_DEPENDENCY(eigenpy REQUIRED)
+FINDPYTHON()
+SEARCH_FOR_BOOST_PYTHON()
+ADD_PROJECT_DEPENDENCY(Eigen3 REQUIRED)
+ADD_PROJECT_DEPENDENCY(eigenpy REQUIRED)
 
-# string(REGEX REPLACE "-" "_" PY_NAME ${FOOTSTEP_PLANNER_NAME})
-# set(${PY_NAME}_INSTALL_DIR ${PYTHON_SITELIB}/${PY_NAME})
+string(REGEX REPLACE "-" "_" PY_NAME ${FOOTSTEP_PLANNER_NAME})
+set(${PY_NAME}_INSTALL_DIR ${PYTHON_SITELIB}/${PY_NAME})
 
-# # Main cpp Library
-# set(${FOOTSTEP_PLANNER_NAME}_HEADERS
-#   include/FootTrajectoryBezier.hpp
-# )
+# Main cpp Library
+set(${FOOTSTEP_PLANNER_NAME}_HEADERS
+  include/Types.hpp
+  include/Surface.hpp
+  include/FootTrajectoryBezier.hpp
+)
 
-# set(${FOOTSTEP_PLANNER_NAME}_SOURCES_CPP
-#   src/FootTrajectoryBezier.cpp
-# )
+set(${FOOTSTEP_PLANNER_NAME}_SOURCES_CPP
+  src/Surface.cpp
+  src/FootTrajectoryBezier.cpp
+)
 
-# include_directories("${CMAKE_SOURCE_DIR}/${FOOTSTEP_PLANNER_NAME}/include")
-# ADD_LIBRARY(${FOOTSTEP_PLANNER_NAME}_cpp SHARED ${${FOOTSTEP_PLANNER_NAME}_SOURCES_CPP} ${${FOOTSTEP_PLANNER_NAME}_HEADERS})
+include_directories("${CMAKE_SOURCE_DIR}/${FOOTSTEP_PLANNER_NAME}/include")
+ADD_LIBRARY(${FOOTSTEP_PLANNER_NAME}_cpp SHARED ${${FOOTSTEP_PLANNER_NAME}_SOURCES_CPP} ${${FOOTSTEP_PLANNER_NAME}_HEADERS})
 
-# # Include Eigen3 directories
-# TARGET_INCLUDE_DIRECTORIES(${FOOTSTEP_PLANNER_NAME}_cpp SYSTEM PRIVATE ${EIGEN3_INCLUDE_DIR})
-# TARGET_INCLUDE_DIRECTORIES(${FOOTSTEP_PLANNER_NAME}_cpp SYSTEM INTERFACE ${EIGEN3_INCLUDE_DIR})
+# Include Eigen3 directories
+TARGET_INCLUDE_DIRECTORIES(${FOOTSTEP_PLANNER_NAME}_cpp SYSTEM PRIVATE ${EIGEN3_INCLUDE_DIR})
+TARGET_INCLUDE_DIRECTORIES(${FOOTSTEP_PLANNER_NAME}_cpp SYSTEM INTERFACE ${EIGEN3_INCLUDE_DIR})
 
-# # Find pinocchio library
-# ADD_PROJECT_DEPENDENCY(pinocchio REQUIRED)
-# TARGET_LINK_LIBRARIES(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC pinocchio::pinocchio)
+# Find pinocchio library
+ADD_PROJECT_DEPENDENCY(pinocchio REQUIRED)
+TARGET_LINK_LIBRARIES(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC pinocchio::pinocchio)
 
-# # Find parametric curves library and headers
-# ADD_PROJECT_DEPENDENCY(ndcurves REQUIRED)
-# TARGET_LINK_LIBRARIES(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC ndcurves::ndcurves)
+# Find parametric curves library and headers
+ADD_PROJECT_DEPENDENCY(ndcurves REQUIRED)
+TARGET_LINK_LIBRARIES(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC ndcurves::ndcurves)
 
-# # Find eiquadprog library and headers
-# ADD_PROJECT_DEPENDENCY(eiquadprog REQUIRED)
-# TARGET_LINK_LIBRARIES(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC eiquadprog::eiquadprog)
+# Find eiquadprog library and headers
+ADD_PROJECT_DEPENDENCY(eiquadprog REQUIRED)
+TARGET_LINK_LIBRARIES(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC eiquadprog::eiquadprog)
 
-# # Add suffix version
-# if(SUFFIX_SO_VERSION)
-#   set_target_properties(${FOOTSTEP_PLANNER_NAME}_cpp PROPERTIES SOVERSION ${PROJECT_VERSION})
-# endif()
+# Add suffix version
+if(SUFFIX_SO_VERSION)
+  set_target_properties(${FOOTSTEP_PLANNER_NAME}_cpp PROPERTIES SOVERSION ${PROJECT_VERSION})
+endif()
 
-# target_compile_options(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC -DNDEBUG -O3)
+target_compile_options(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC -DNDEBUG -O3)
 
-# # Python Bindings
-# set(${PY_NAME}_BINDINGS_SOURCES
-#   bindings/walkgen.cpp
-# )
-# ADD_LIBRARY(${PY_NAME}_pywrap SHARED ${${PY_NAME}_BINDINGS_SOURCES})
-# TARGET_LINK_LIBRARIES(${PY_NAME}_pywrap PUBLIC ${FOOTSTEP_PLANNER_NAME}_cpp ${PYTHON_LIBRARY} eigenpy::eigenpy)
-# TARGET_INCLUDE_DIRECTORIES(${PY_NAME}_pywrap SYSTEM PRIVATE ${PYTHON_INCLUDE_DIRS})
-# set_target_properties(${PY_NAME}_pywrap PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PY_NAME})
-# TARGET_LINK_BOOST_PYTHON(${PY_NAME}_pywrap PUBLIC)
-# install(TARGETS ${PY_NAME}_pywrap DESTINATION ${${PY_NAME}_INSTALL_DIR})
+# Python Bindings
+set(${PY_NAME}_BINDINGS_SOURCES
+  bindings/walkgen.cpp
+)
+ADD_LIBRARY(${PY_NAME}_pywrap SHARED ${${PY_NAME}_BINDINGS_SOURCES})
+TARGET_LINK_LIBRARIES(${PY_NAME}_pywrap PUBLIC ${FOOTSTEP_PLANNER_NAME}_cpp ${PYTHON_LIBRARY} eigenpy::eigenpy)
+TARGET_INCLUDE_DIRECTORIES(${PY_NAME}_pywrap SYSTEM PRIVATE ${PYTHON_INCLUDE_DIRS})
+set_target_properties(${PY_NAME}_pywrap PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PY_NAME})
+TARGET_LINK_BOOST_PYTHON(${PY_NAME}_pywrap PUBLIC)
+install(TARGETS ${PY_NAME}_pywrap DESTINATION ${${PY_NAME}_INSTALL_DIR})
 
-# # Installation
-# install(TARGETS ${FOOTSTEP_PLANNER_NAME}_cpp EXPORT ${TARGETS_EXPORT_NAME} DESTINATION lib)
+# Installation
+install(TARGETS ${FOOTSTEP_PLANNER_NAME}_cpp EXPORT ${TARGETS_EXPORT_NAME} DESTINATION lib)
