[update] Remove heightmap tools (cpp version), finish separation between surface processing and planner, update tests, examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,8 +78,8 @@ if(FOOTSTEP_PLANNER)
 endif()
 
 if(SURFACE_PLANNER)
-  ADD_SUBDIRECTORY("${SURFACE_PLANNER_NAME}/python")
-  ADD_SUBDIRECTORY("${SURFACE_PROCESSING_NAME}/python")
+  ADD_SUBDIRECTORY("${SURFACE_PLANNER_NAME}")
+  ADD_SUBDIRECTORY("${SURFACE_PROCESSING_NAME}")
 endif()
 
 if(ROS_INTERFACE)
