Binding hpp-affordance to extract affordances from stl, update examples, readme, parameters

--- a/walkgen_surface_processing/python/CMakeLists.txt
+++ b/walkgen_surface_processing/python/CMakeLists.txt
@@ -30,6 +30,7 @@ SET(${SURFACE_PROCESSING_NAME}_SOURCES
   __init__.py
   surface_processing.py
   surface_detector.py
+  params.py
 )
 
 SET(${SURFACE_PROCESSING_NAME}_TOOLS_SOURCES
@@ -40,6 +41,12 @@ SET(${SURFACE_PROCESSING_NAME}_TOOLS_SOURCES
   SurfaceData.py
   )
 
+SET(${SURFACE_PROCESSING_NAME}_EXAMPLES_SOURCES
+__init__.py
+process_planeseg.py
+process_stl.py
+)
+
 
 FOREACH(src ${${SURFACE_PROCESSING_NAME}_SOURCES})
   PYTHON_INSTALL_ON_SITE(${SURFACE_PROCESSING_NAME} ${src})
@@ -49,5 +56,11 @@ FOREACH(src ${${SURFACE_PROCESSING_NAME}_TOOLS_SOURCES})
   PYTHON_INSTALL_ON_SITE(${SURFACE_PROCESSING_NAME}/tools ${src})
 ENDFOREACH(src ${SURFACE_PROCESSING_NAME}_TOOLS_SOURCES)
 
+FOREACH(src ${${SURFACE_PROCESSING_NAME}_EXAMPLES_SOURCES})
+  PYTHON_INSTALL_ON_SITE(${SURFACE_PROCESSING_NAME}/examples ${src})
+ENDFOREACH(src ${SURFACE_PROCESSING_NAME}_EXAMPLES_SOURCES)
+
 ADD_LIBRARY(${SURFACE_PROCESSING_NAME} INTERFACE)
 INSTALL(TARGETS ${SURFACE_PROCESSING_NAME} EXPORT ${TARGETS_EXPORT_NAME} DESTINATION lib)
+
+INSTALL(DIRECTORY ${SURFACE_PROCESSING_NAME}/data DESTINATION ${PYTHON_SITELIB}/${SURFACE_PROCESSING_NAME})
