Remove unused dependency

--- a/walkgen_footstep_planner/CMakeLists.txt
+++ b/walkgen_footstep_planner/CMakeLists.txt
@@ -61,8 +61,8 @@ TARGET_INCLUDE_DIRECTORIES(${FOOTSTEP_PLANNER_NAME}_cpp SYSTEM PRIVATE ${EIGEN3_
 TARGET_INCLUDE_DIRECTORIES(${FOOTSTEP_PLANNER_NAME}_cpp SYSTEM INTERFACE ${EIGEN3_INCLUDE_DIR})
 
 # Find pinocchio library
-ADD_PROJECT_DEPENDENCY(pinocchio REQUIRED)
-TARGET_LINK_LIBRARIES(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC pinocchio::pinocchio)
+# ADD_PROJECT_DEPENDENCY(pinocchio REQUIRED)
+# TARGET_LINK_LIBRARIES(${FOOTSTEP_PLANNER_NAME}_cpp PUBLIC pinocchio::pinocchio)
 
 # Find parametric curves library and headers
 ADD_PROJECT_DEPENDENCY(ndcurves REQUIRED)
