--- a/walkgen_surface_planner/config/params.yaml
+++ b/walkgen_surface_planner/config/params.yaml
@@ -1,10 +1,4 @@
 walkgen_params:
-  planeseg: False # Use URDF of the environment or planeseg visualisation.
-
-  world:
-    path: "" # if path = "", path = os.path.dirname(os.path.abspath(__file__))
-    urdf: "/data/urdf/lab_scene.urdf" # Env URDF path + urdf
-    heightmap: "/data/lab_scene.dat"  # Heightmap path + heightmap
 
   params:
     margin: 0.06 # inner surface margin
@@ -15,6 +9,12 @@ walkgen_params:
     N_phase: 6 # Number of step to proceed (--> N_phase * n_gait step in SL1M)
     N_phase_return: 2 # Number of step to return (N_phase_return surfaces for each foot)
     com: False # Optimisation of the CoM
+
+  heightmap:
+    fitsize_x: 10
+    fitsize_y: 5
+    fitlength: 0.3 # half-square size centered around position of the robot.
+    recompute_slope: False # Recompute the slope of the terrain for each contact phase configuration.
 
   gait:
     type: "walk" # Only "walk" or "trot" working
