--- a/walkgen_footstep_planner/config/params.yaml
+++ b/walkgen_footstep_planner/config/params.yaml
@@ -18,3 +18,10 @@ walkgen_params:
       N_ss: 70
       N_uds: 0
       N_uss: 0
+  bezier:
+    margin: 0.08  # Margin [m] wrt to the segment crossed in the surface.
+    t_margin: 0.3  # % of the curve constrained around critical point.
+    z_margin: 0.04  # % of the curve after the critical point.
+    N_sample: 10  # Number of sample in the least square optimisation for Bezier coeffs
+    N_sample_ineq: 8  # Number of sample while browsing the curve
+    degree: 7  # Degree of the Bezier curve
