[fix?] do 'remove_overlap_surfaces' before 'reduce_surfaces'

--- a/walkgen_surface_planner/python/CMakeLists.txt
+++ b/walkgen_surface_planner/python/CMakeLists.txt
@@ -30,6 +30,7 @@
 # ----------------------------------------------------
 
 # ------ SL1M --------------------
+find_package(sl1m REQUIRED)
 execute_process(
     COMMAND ${PYTHON_EXECUTABLE} -c "import sl1m"
     RESULT_VARIABLE EXIT_CODE
