Add a pacakge.xml for super build like catkin and colcon, fix the main CMakelists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,8 @@ INCLUDE(cmake/python.cmake)
 
 SET(PROJECT_USE_CMAKE_EXPORT TRUE)
 
-SETUP_PROJECT()
+project(${PROJECT_NAME} ${PROJECT_ARGS})
+
 FINDPYTHON()
 ADD_PROJECT_DEPENDENCY(pinocchio)
 
