[update] Add a class to load surfaces from a folder containing .stl files

--- a/walkgen_surface_processing/python/CMakeLists.txt
+++ b/walkgen_surface_processing/python/CMakeLists.txt
@@ -30,6 +30,7 @@ SET(${SURFACE_PROCESSING_NAME}_SOURCES
   __init__.py
   surface_processing.py
   surface_detector.py
+  surface_loader.py
   params.py
 )
 
