[update] Add ContactShedule class

--- a/walkgen_footstep_planner/CMakeLists.txt
+++ b/walkgen_footstep_planner/CMakeLists.txt
@@ -47,12 +47,14 @@ set(${FOOTSTEP_PLANNER_NAME}_HEADERS
   include/Surface.hpp
   include/FootTrajectoryBezier.hpp
   include/ContactPhase.hpp
+  include/ContactSchedule.hpp
 )
 
 set(${FOOTSTEP_PLANNER_NAME}_SOURCES_CPP
   src/Surface.cpp
   src/FootTrajectoryBezier.cpp
   src/ContactPhase.cpp
+  src/ContactSchedule.cpp
 )
 
 include_directories("${CMAKE_SOURCE_DIR}/${FOOTSTEP_PLANNER_NAME}/include")
