--- a/walkgen_footstep_planner/config/params.yaml
+++ b/walkgen_footstep_planner/config/params.yaml
@@ -19,9 +19,12 @@ walkgen_params:
       N_uds: 0
       N_uss: 0
   bezier:
-    margin: 0.08  # Margin [m] wrt to the segment crossed in the surface.
-    t_margin: 0.3  # % of the curve constrained around critical point.
-    z_margin: 0.04  # % of the curve after the critical point.
+    margin_up: 0.08  # Margin [m] wrt to the segment crossed in the surface.
+    t_margin_up: 0.045  # % of the curve constrained around critical point.
+    z_margin_up: 0.045  # % of the curve after the critical point.
+    margin_down: 0.08  # Margin [m] wrt to the segment crossed in the surface.
+    t_margin_down: 0.045  # % of the curve constrained around critical point.
+    z_margin_down: 0.045  # % of the curve after the critical point.
     N_sample: 10  # Number of sample in the least square optimisation for Bezier coeffs
     N_sample_ineq: 8  # Number of sample while browsing the curve
     degree: 7  # Degree of the Bezier curve
