[update] Add Footstep planner in c++

--- a/walkgen_footstep_planner/CMakeLists.txt
+++ b/walkgen_footstep_planner/CMakeLists.txt
@@ -53,6 +53,7 @@ set(${FOOTSTEP_PLANNER_NAME}_HEADERS
   include/Gait.hpp
   include/GaitManager.hpp
   include/Filter.hpp
+  include/FootStepPlanner.hpp
 )
 
 set(${FOOTSTEP_PLANNER_NAME}_SOURCES_CPP
@@ -64,6 +65,7 @@ set(${FOOTSTEP_PLANNER_NAME}_SOURCES_CPP
   src/FootTrajectoryWrapper.cpp
   src/Gait.cpp
   src/GaitManager.cpp
+  src/FootStepPlanner.cpp
 )
 
 include_directories("${CMAKE_SOURCE_DIR}/${FOOTSTEP_PLANNER_NAME}/include")
