--- a/walkgen_surface_planner/config/params.yaml
+++ b/walkgen_surface_planner/config/params.yaml
@@ -1,31 +1,11 @@
 walkgen_params:
-
   params:
-    margin: 0.06 # inner surface margin
-    n_points: 6 # Maximum number of vertices for the surfaces
-    method_id: 3 # Method to remove overlapping
-    poly_size: 10 # Number of maximum point for convex decomposition.
-    min_area: 0.03 # Minimum area to keep the surfaces
-    N_phase: 6 # Number of step to proceed (--> N_phase * n_gait step in SL1M)
-    N_phase_return: 2 # Number of step to return (N_phase_return surfaces for each foot)
+    N_phase_return: 3 # Number of step to return (N_phase_return surfaces for each foot)
     com: False # Optimisation of the CoM
+    horizon: 8 # Number of fstep opitimised.
 
   heightmap:
     fitsize_x: 10
     fitsize_y: 5
     fitlength: 0.3 # half-square size centered around position of the robot.
     recompute_slope: False # Recompute the slope of the terrain for each contact phase configuration.
-
-  gait:
-    type: "walk" # Only "walk" or "trot" working
-    dt: 0.01
-    trot:
-      N_ds: 0
-      N_ss: 60
-      N_uds: 0
-      N_uss: 0
-    walk:
-      N_ds: 90
-      N_ss: 70
-      N_uds: 0
-      N_uss: 0
