--- a/walkgen_footstep_planner/CMakeLists.txt
+++ b/walkgen_footstep_planner/CMakeLists.txt
@@ -34,7 +34,7 @@ ADD_SUBDIRECTORY("python")
 # -------------------------------
 
 # FINDPYTHON()
-SEARCH_FOR_BOOST_PYTHON()
+# SEARCH_FOR_BOOST_PYTHON()
 ADD_PROJECT_DEPENDENCY(Eigen3 REQUIRED)
 ADD_PROJECT_DEPENDENCY(eigenpy REQUIRED)
 
